--- a/spotify/index.html
+++ b/spotify/index.html
@@ -7,7 +7,10 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <h1 class="text-9xl font-bold underline">Hello world!</h1>
+    <div class="bg-sp-green">
+      <h1 class="text-9xl font-bold underline">Hello world!</h1>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
